[package]
name = "raspberry_pi_wireless_bootstrap"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indoc = "2"
reqwest = { version = "0.12", default-features=false, features = ["blocking", "json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi", "tracing-log"] }
